name:                ac1617
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ac1617#readme
license:             BSD3
license-file:        LICENSE
author:              Author name MFES
maintainer:          example@example.com
copyright:           2017 Author name MFES
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  build-depends:   base >= 4.7 && < 5
                   , random
                   , process
  exposed-modules: Qais Cp Probability MMM MMT SMT ListUtils Show St
